[tool.poetry]
name = "real-esrgan"
version = "0.1.0"
description = ""
authors = ["Visoid <you@example.com>"]
readme = "README.md"
packages = [
    { include = "Real_ESRGAN" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
torch = ">=1.7"
torchvision = ">=0.8.0"
tqdm = "^4.66.1"
huggingface-hub = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
